fix(ffe-context-message): use overflow-wrap:anywhere with word-break:normal

--- a/packages/ffe-context-message/less/context-message.less
+++ b/packages/ffe-context-message/less/context-message.less
@@ -58,8 +58,7 @@
     .ffe-small-text,
     .ffe-link-text,
     &__header {
-        word-break: break-all;
-        hyphens: auto;
+        overflow-wrap: anywhere;
     }
 
     .ffe-body-paragraph,
